kubernetes/apps/observability/gatus/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gatus
  namespace: observability
spec:
  podSelector:
    matchLabels:
      name: gatus
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow traffic from network namespace
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
  egress:
    # Allow health checks to all namespaces (all ports)
    - to:
        - namespaceSelector: {}
